--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@ layout: compress
 </head>
 
 <body>
+  {% include header.html %}
+
   {{ content }}
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 </body>
