--- a/_layouts/msg.html
+++ b/_layouts/msg.html
@@ -1,14 +1,17 @@
 ---
 layout: default
 ---
+
 <div class="wrapper msg">
   <header class="msg__header">
     <h1 class="msg__title">{{ page.title }}</h1>
   </header>
 
   <div class="msg__content">
-    <h4>{{ page.excerpt }}</h4>
+    <p>{{ page.excerpt }}</p>
     {{ content }}
-    <p><a href="javascript: history.back();">Voltar</a></p>
+    <p>
+      <a href="javascript: history.back();">Voltar</a>
+    </p>
   </div>
 </div>
