--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,12 @@
 ---
 layout: compress
 ---
+
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  {% seo %}
-
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Jura:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicon.ico">
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicon.png">
-</head>
-
-<body>
-  {% include header.html %}
-
-  {{ content }}
-  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
-</body>
-
+  {%- include head.html -%}
+  <body>
+    {% include header.html %} {{ content }}
+    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+  </body>
 </html>
