--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import "mixins";
 @import "monica";
 @import "base";
+@import "typography";
 @import "helpers";
 @import "forms";
 @import "layout";
