--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -1,10 +1,10 @@
-%form-basis {
-  padding: 0.5em;
+%form-control {
+  padding: 1em;
   font: inherit;
   color: inherit;
   border: 1px solid;
   background-color: $background-color;
-  border-radius: 2px;
+  border-radius: 6px;
   outline: none;
   position: relative;
 
@@ -37,13 +37,13 @@ label {
 input,
 textarea,
 select {
-  @extend %form-basis;
+  @extend %form-control;
   width: 100%;
-  border-color: $grey-color;
+  border-color: $grey-500;
 
   &:focus {
-    border-color: $aqua;
-    box-shadow: 0 0 15px $aqua;
+    border-color: $active-color;
+    box-shadow: 0 0 10px rgba($active-color, 0.3);
   }
 }
 
@@ -54,101 +54,51 @@ input {
   }
 }
 
-button {
-  @extend %form-basis;
-  padding-left: 1.2em;
-  padding-right: 1.2em;
+button, .btn {
+  @extend %form-control;
+  padding-left: 2em;
+  padding-right: 2em;
   text-align: center;
-  font-family: $title-font-family;
   font-weight: 600;
   letter-spacing: 1px;
   line-height: $base-line-height;
-  color: $aqua;
-  border-color: $aqua;
-  background-image: linear-gradient(
-    100deg,
-    transparent 10%,
-    #fff 15%,
-    #fff 85%,
-    transparent 90%
-  );
-  background-size: 0;
-  background-position: 0 0;
-  background-repeat: no-repeat;
+  color: white;
+  border: 0 none;
+  border-radius: 9em;
+  background-color: $brand-color;
 
-  &:before,
-  &:after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 25%;
-    height: 0.3em;
-    background-color: $aqua;
-  }
-
-  &:before {
-    bottom: 100%;
-    right: -1px;
-    clip-path: polygon(0.4em 0%, 100% 0, 100% 100%, 0 100%);
-  }
-
-  &:after {
-    top: 100%;
-    left: -1px;
-    clip-path: polygon(0% 0%, 100% 0, calc(100% - 0.4em) 100%, 0 100%);
-  }
+  cursor: pointer;
 
   &:hover,
   &:focus,
   &:active {
-    color: #fff;
-    animation: fatchim 0.15s ease-in-out forwards;
-    box-shadow: 0 0 15px $aqua;
-
-    @keyframes fatchim {
-      0% {
-        background-size: 0;
-        background-position: 0 0;
-      }
-      50% {
-        background-size: 50%;
-      }
-      100% {
-        background-size: 0;
-        background-position: 100% 100%;
-      }
-    }
-
-    &:before {
-      width: 70%;
-    }
-
-    &:after {
-      width: 70%;
-    }
+    color: white;
+    text-decoration: none;
+    background-color: $active-color;
+    box-shadow: 0 0 15px $active-color;
   }
 
   &:focus,
   &:active {
     transition-duration: 0.1s;
-    box-shadow: 0 0 15px $aqua;
+    box-shadow: 0 0 15px $active-color;
   }
 }
 
 ::-webkit-input-placeholder {
-  color: $grey-color;
+  color: $grey-500;
   opacity: 1;
 }
 \:-moz-placeholder {
-  color: $grey-color;
+  color: $grey-500;
   opacity: 1;
 }
 ::-moz-placeholder {
-  color: $grey-color;
+  color: $grey-500;
   opacity: 1;
 }
 \:-ms-input-placeholder {
-  color: $grey-color;
+  color: $grey-500;
   opacity: 1;
 }
 \:focus::-webkit-input-placeholder {
