--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
       <div id="main-menu" class="trigger">
         {% if page.menu %}
           {% for item in page.menu %}
-            <a class="page-link" href="{{ item.url }}">{{ item.label }}</a>
+            <a class="page-link {{ item.class }}" href="{{ item.url }}">{{ item.label }}</a>
           {% endfor %}
         {% else %}
           <a class="page-link" href="/">Início</a>
