--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,8 +1,5 @@
 .site-header {
   height: $header-height;
-  line-height: $header-height;
-  background-color: $background-color;
-  box-shadow: 0 0 10px rgba(#000, 0.1);
 }
 
 .site-title {
@@ -12,6 +9,7 @@
   float: left;
   height: $header-height;
   padding-right: $spacing-unit / 4;
+  color: black;
 
   &__icon {
     @extend .icon;
@@ -27,36 +25,38 @@
 
   &__text {
     font-size: 1.5em;
+    line-height: 1;
+    text-transform: uppercase;
+    font-family: $base-font-family;
   }
 }
 
 .site-nav {
   float: right;
+  line-height: $header-height;
 
   .page-link {
     padding: 0 2em;
     font-size: #{$small-font-size};
-    font-family: $control-font-family;
     font-weight: 600;
     line-height: #{$header-height - $header-threshold};
     letter-spacing: 1px;
+    border-radius: 0;
 
-    &:hover,
-    &:focus,
-    &:active {
-      color: $active-color;
-      text-decoration: none;
-      outline: none;
-      box-shadow: 0 0 0 1px $active-color, 0 0 10px rgba($active-color, 0.3);
+    &:not(.btn) {
+      &:hover,
+      &:focus,
+      &:active {
+        text-decoration: none;
+        outline: none;
+        color: black;
+        background-color: $gray-300;
+      }
     }
 
-    @include media-greater($on-laptop) {
-      margin-left: $spacing-unit / 2;
-      border-radius: 9em;
-    }
-
-    @include media-greater($on-laptop) {
+    @include media-greater($menu-breakpoint) {
       display: inline-block;
+      border-radius: 9em;
     }
   }
 
@@ -68,7 +68,7 @@
     @extend %transition;
   }
 
-  @include media-query($on-laptop) {
+  @include media-query($menu-breakpoint) {
     .menu-icon {
       display: flex;
       flex-direction: column;
