--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -1,5 +1,4 @@
-$base-font-family: 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif,
-  'Apple Color Emoji', 'Segoe UI Emoji';
+$base-font-family: "Roboto Condensed", sans-serif;
 $title-font-family: $base-font-family;
 $control-font-family: $base-font-family;
 $base-font-size: 16px;
@@ -9,15 +8,15 @@ $base-line-height: 1.5;
 
 $spacing-unit: 40px;
 
-$grey-100: #f5f5f5;
-$grey-200: #eeeeee;
-$grey-300: #e0e0e0;
-$grey-400: #bdbdbd;
-$grey-500: #9e9e9e;
-$grey-600: #757575;
-$grey-700: #616161;
-$grey-800: #424242;
-$grey-900: #212121;
+$gray-100: #f5f5f5;
+$gray-200: #eeeeee;
+$gray-300: #e0e0e0;
+$gray-400: #bdbdbd;
+$gray-500: #9e9e9e;
+$gray-600: #757575;
+$gray-700: #616161;
+$gray-800: #424242;
+$gray-900: #212121;
 
 $red-100: #ffebee;
 $red-200: #ffcdd2;
@@ -49,9 +48,9 @@ $green-700: #388e3c;
 $green-800: #2e7d32;
 $green-900: #1b5e20;
 
-$brand-color: $blue-800;
-$active-color: $blue-500;
-$text-color: $grey-800;
+$brand-color: black;
+$active-color: $blue-900;
+$text-color: $gray-800;
 $background-color: white;
 
 $content-width: 1200px;
@@ -59,6 +58,7 @@ $content-width: 1200px;
 $on-palm: 600px;
 $on-laptop: 800px;
 
+$menu-breakpoint: 860px;
 $header-height: 68px;
 $header-threshold: 22px;
 $header-color: $text-color;
