--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -22,6 +22,11 @@
     background-size: 50% auto;
 
     @include media-greater($on-laptop) {
+      background-position: 450px 50%;
+      background-size: auto 60%;
+    }
+
+    @include media-greater($content-width) {
       background-position: calc(
           (100% - #{$content-width}) / 2 + #{$content-width * 0.75}
         )
