--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -49,7 +49,8 @@ $green-800: #2e7d32;
 $green-900: #1b5e20;
 
 $brand-color: black;
-$active-color: $blue-900;
+$link-color: $blue-500;
+$active-color: $blue-800;
 $text-color: $gray-800;
 $background-color: white;
 
