--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,4 +9,5 @@ layout: compress
     {% include header.html %} {{ content }}
     <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   </body>
+  {%- include footer.html -%}
 </html>
