--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -170,7 +170,7 @@ h6 {
 
 a {
   @extend %transition;
-  color: $brand-color;
+  color: $link-color;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
