--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,7 @@ layout: compress
     {% include header.html %} {{ content }}
     <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   </body>
+  {%- include mapa.html -%}
+  {%- include contato.html -%}
   {%- include footer.html -%}
 </html>
