--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -55,6 +55,8 @@ $text-color: $gray-800;
 $background-color: white;
 
 $content-width: 1200px;
+$content-width-lg: 1400px;
+$content-width-xl: 1600px;
 
 $on-palm: 600px;
 $on-laptop: 800px;
