--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,12 @@ layout: compress
 <!DOCTYPE html>
 <html lang="pt-br">
   {%- include head.html -%}
+
   <body>
-    {% include header.html %} {{ content }}
+    {%- include header.html -%}
+
+    {{ content }}
+    {%- include footer.html -%}
     <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   </body>
-  {%- include mapa.html -%}
-  {%- include contato.html -%}
-  {%- include footer.html -%}
 </html>
