updated server script to send e-mails

--- a/_includes/contato.html
+++ b/_includes/contato.html
@@ -22,7 +22,7 @@
         </p>
       </div>
 
-      <form action="" method="post" class="flex">
+      <form action="//server.mhsar.com.br/enviar.php" method="post" class="flex">
         <p>
           <label for="nome">Nome</label>
           <input
